# uv-projects

./: .gitignore  .gitmodules  README.md  hello.py  main.py  pyproject.toml  requirements.txt  test_all_functions.py
.cursor/rules/: lint.mdc
01_explore_uv/: readme.md
05_chatbot/: README.md  cursor_installtion.md  eeg_project_proposals.md  eeg_signal_analysis_guide.md  eeg_suited_models.md  ml_project_ideas.md  multidimensional_signal_processing.md  pyproject.toml
05_chatbot/src/chatbot/: __init__.py  main.py
blog_generator/: .gitignore  README.md  crewai_flow.html  pyproject.toml
blog_generator/src/blog_flow/: main.py
blog_generator/src/blog_flow/crews/blog_crew/: blog_crew.py
blog_generator/src/blog_flow/crews/blog_crew/config/: agents.yaml  tasks.yaml
crewai-essay/: .env  readme.md  terra_cotta_essay.py  terracotta_warriors_essay.md
guess_my_number/: main.py  main1.py  pyproject.toml
project01/: README.md  poem.txt  pyproject.toml
project01/src/project01/: main.py
project4/: pyproject.toml
project4/src/project4/: __init__.py
random_numbers/: main.py  readme.md
src/calc/: __init__.py  calculator.py  test_calculator.py
src/uv_projects/: __init__.py  main.py
src/uv_projects/agents/: __init__.py  example_agent.py
tests/: __init__.py
