[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uv-projects"
version = "0.1.0"
description = "Python projects using UV package manager"
readme = "README.md"
requires-python = ">=3.10, <3.13"
license = { text = "MIT" }
authors = [
    { name = "Wajih Humayun", email = "wajihh57@example.com" }
]
dependencies = [
    "crewai>=0.100.0",
    "langchain>=0.1.0",
    "python-dotenv>=1.0.0",
    "duckduckgo-search>=7.3.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true 