[project]
name = "blog_generator"
version = "0.1.0"
description = "Blog Generator using crewAI"
authors = [{ name = "Your Name", email = "wajihh57@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
]

[project.scripts]
kickoff = "blog_flow.main:kickoff"
plot = "blog_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blog_flow"]

[tool.crewai]
type = "flow" 