[project]
name = "project4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Wajih Humayun Hashmi", email = "wajihh57@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.59.10",
]

[project.scripts]
project4 = "project4:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
